--- a/index.html
+++ b/index.html
@@ -142,9 +142,7 @@
                         <img class="lazyload" data-sizes="auto"
                             data-original-src="./assets/prod/images/intro_profile.jpg">
                         <div class="sig-wrap">
-                            <img class="lazyload" data-sizes="auto"
-                                data-original-src="./assets/prod/images/Melita-Lloyd.jpg">
-                            <p>Legal Drafter and Lawyer</p>
+                            <img src="./assets/prod/svgs/Melita-Lloyd.svg">
                         </div>
                     </div>
                 </div>
@@ -292,7 +290,7 @@
                                         <br>
                                     </p>
                                     <p class="copy">
-                                        As Australia’s only fixed fee family law legal drafting service, hiring me is
+                                        As Australia's only fixed fee family law legal drafting service, hiring me is
                                         $1,000s more affordable (plus faster and easier) than seeing a traditional
                                         family lawyer.
                                     </p>
@@ -348,7 +346,7 @@
                                 </div>
                                 <div class="col-10 text">
                                     <p class="heading">
-                                        Don’t Pay Stamp Duty On Property Transfers
+                                        Don't Pay Stamp Duty On Property Transfers
                                         <br>
                                     </p>
                                     <p class="copy">
@@ -385,11 +383,11 @@
                                 </div>
                                 <div class="col-10 text">
                                     <p class="heading">
-                                        Avoid A DIY Disaster That Isn’t Legally Binding
+                                        Avoid A DIY Disaster That Isn't Legally Binding
                                         <br>
                                     </p>
                                     <p class="copy">
-                                        A DIY mistake could set your settlement back months – during which time your
+                                        A DIY mistake could set your settlement back months - during which time your
                                         partner could change their mind and demand more from the settlement.
                                     </p>
                                 </div>
@@ -446,7 +444,7 @@
                         data-original-src="./assets/prod/images/left_hand_img.png">
                 </div>
                 <div class="col-md-10 col-lg-6">
-                    <h2 class="text-center text-lg-start">Save $1,000s On Greedy Lawyers Who View Your Painful
+                    <h2 class="text-center text-lg-start pb-5">Save $1,000s On Greedy Lawyers Who View Your Painful
                         Separation As A Way To Line Their Pockets</h2>
                     <p>Your painful separation is bread and butter for traditional family lawyers. And by bread, I mean
                         a baguette flown in from France, and by butter, I mean caviar. These money-hungry lawyers
@@ -455,8 +453,8 @@
                     </p>
 
                     <p>
-                        I wish this was just a nasty stereotype, but having worked in family law for a decade I’ve seen
-                        too many lawyers that fit this description. That’s why I started The Legal Drafter – to provide
+                        I wish this was just a nasty stereotype, but having worked in family law for a decade I've seen
+                        too many lawyers that fit this description. That's why I started The Legal Drafter – to provide
                         hard working Australians a fast and affordable way to finalise their separation, without having
                         to spend every last cent on legal fees.
                     </p>
@@ -471,29 +469,32 @@
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-10 col-lg-6 order-last order-lg-first">
-                    <h2 class="text-center text-lg-start">Be Kept In The Loop With Regular Updates So You Know How Your
+                    <h2 class="text-center text-lg-start pb-5">Be Kept In The Loop With Regular Updates So You Know How Your
                         Settlement Is Progressing </h2>
-                    <p>Most family lawyers prioritise cases based on how much money they’re worth. If your lawyer
+                    <p>Most family lawyers prioritise cases based on how much money they're worth. If your lawyer
                         has clients on $50k retainers, what chance do you have of getting their attention? Your
                         emails go unread, phone calls left unanswered, and it takes weeks (or even months) to get a
                         reply for the simplest issue.
                     </p>
                     <p>
-                        When you hire me, you’ll be kept in the loop from start to finish. We’ll establish a regular
+                        When you hire me, you'll be kept in the loop from start to finish. We'll establish a regular
                         dialogue to avoid complications and resolve issues as soon as they occur. And if you need to
-                        call on a weekend or after hours to discuss something important? I’ll answer. Because
+                        call on a weekend or after hours to discuss something important? I'll answer. Because
                         separation is stressful enough without having to chase up an unreliable lawyer.
 
                     </p>
                     <div class="btn-section text-md-center">
                         <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
-                        <p> Get Consent Orders Prepared Inside 24 Hours <br>
+                        <p class="text-center"> Get Consent Orders Prepared Inside 24 Hours <br>
                             So You Can Finally Move On With Your Life!</p>
                     </div>
                 </div>
 
                 <div class="col-md-10 col-lg-6 text-center order-first order-lg-last">
+                    <div class="float-24-hour">
+                        <img src="./assets/prod/svgs/24-hour.svg" alt="">
+                    </div>
                     <img class="img-fluid mb-5 mb-lg-0 view-animation fade-left max-width-image"
                         data-original-src="./assets/prod/images/right_hand_img.png">
                 </div>
@@ -545,7 +546,7 @@
                                     Book A Short 15-Minute Call With Me
                                 </div>
                                 <div class="copy">
-                                    I’ll give you an overview of how things work, explain what you’ll need to do, and
+                                    I'll give you an overview of how things work, explain what you'll need to do, and
                                     outline what to expect during every stage of the process.
                                 </div>
                             </div>
@@ -627,7 +628,7 @@
                                 </div>
                                 <div class="copy">
                                     You will typically be set for a Consent Orders Hearing in 1-8 weeks. Once your
-                                    Consent Orders are approved, we’ll send it to both you and your partner.
+                                    Consent Orders are approved, we'll send it to both you and your partner.
                                 </div>
                             </div>
                         </li>
@@ -693,7 +694,7 @@
                     <img class="lazyload" data-sizes="auto" data-original-src="./assets/prod/images/guarantee.jpg">
                 </div>
                 <div class="col-md-8 text-center">
-                    <h2>Ready In 24 Hours… Or We Work For Free</h2>
+                    <h2>Ready In 24 Hours… <br class="d-sm-none"> Or We Work For Free</h2>
                 </div>
                 <p class="mx-auto">We're fed up with the legal industry's neglect for clients. Whether it's slow
                     response times or
@@ -962,8 +963,8 @@
                                                 upfront about fixed fees, other lawyers were 3 times more expensive and
                                                 then tried to bargain with me when I said I was given a cheaper price.
                                                 Melita did my consent order within a day and took the pressure of me
-                                                during a difficult time. Couldn’t thank her enough and would recommend
-                                                her highly. Don’t waste your time with anyone else
+                                                during a difficult time. Couldn't thank her enough and would recommend
+                                                her highly. Don't waste your time with anyone else
 
                                             </p>
                                             <p class="text-start title">
@@ -1112,10 +1113,10 @@
                                             </div>
                                             <p class="text-start">
 
-                                                Honestly, you won’t find a lawyer like Melita these days, very
+                                                Honestly, you won't find a lawyer like Melita these days, very
                                                 professional, very efficient, very patient, my case was very difficult
                                                 due to my ex is very painful, but Melita is super supportive and
-                                                helpful, I can’t thank her enough, I am so grateful find her to be my
+                                                helpful, I can't thank her enough, I am so grateful find her to be my
                                                 lawyer! Thank you so much 🙏!
 
                                             </p>
@@ -1257,10 +1258,10 @@
                                             </div>
                                             <p class="text-start">
                                                 Melita is absolutely amazing, accessible and kind !!!
-                                                She operates with an integrity, I haven’t come across before in the
+                                                She operates with an integrity, I haven't come across before in the
                                                 legal arena.
                                                 I had delayed doing our financial settlement due to the effect of Covid
-                                                on my ex-husband’s finances ( we are amicable ). I was a week away from
+                                                on my ex-husband's finances ( we are amicable ). I was a week away from
                                                 the deadline to submit the consent orders, when I found Melita online -
                                                 thanks to all these reviews !!!
 
@@ -1498,10 +1499,10 @@
                         TERMS AND CONDITIONS:
                     </p>
                     <p class="copy">
-                        The Legal Drafter’s “24 Hour Guarantee” applies from the time The Legal Drafter acknowledges
+                        The Legal Drafter's “24 Hour Guarantee” applies from the time The Legal Drafter acknowledges
                         receipt of your Client Instruction Form and states that drafting has commenced.
 
-                        The Legal Drafter’s “24 Hour Guarantee” does not apply: where parties have not provided all
+                        The Legal Drafter's “24 Hour Guarantee” does not apply: where parties have not provided all
                         their information to be able to complete the Consent Orders; to weekends, public holidays (State
                         and National); technology malfunction; fire, theft, natural disaster; or any other circumstance
                         that may arise from time to time that is out of the direct control of The Legal Drafter.
