--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                     <div class="btn-section text-md-center">
                         <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
-                        <p class="text-center"> Get Consent Orders Prepared Inside 24 Hours <br>
+                        <p class="text-center"> Get Consent Orders Prepared Inside 24 Hours <br class="d-md-none">
                             So You Can Finally Move On With Your Life!</p>
                     </div>
                 </div>
