--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                         <a href="#form" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
                         <div class="hero-reviews d-flex mx-auto justify-content-center">
-                            <img src="./assets/prod/svgs/header_google_reviews.svg" alt="5 Star Google Review">
-                            <img class="fb-fix" src="./assets/prod/svgs/header_facebook_reviews.svg" alt="5 Star Facebook">
+                            <img src="./assets/prod/images/header_google_reviews.png" alt="5 Star Google Review">
+                            <img class="fb-fix" src="./assets/prod/images/header_facebook_reviews.png" alt="5 Star Facebook">
                         </div>
                     </div>
                 </div>
@@ -1301,8 +1301,8 @@
                 <div class="col-md-8 col-lg-6">
                     <!-- <div class="reviews d-flex mx-auto"> -->
                         <div class="hero-reviews d-flex mx-auto justify-content-center">
-                            <img src="./assets/prod/svgs/body_google_reviews.svg" alt="5 Star Google Review">
-                            <img class="fb-fix" src="./assets/prod/svgs/body_facebook_reviews.svg" alt="5 Star Facebook">
+                            <img src="./assets/prod/images/body_google_reviews.png" alt="5 Star Google Review">
+                            <img class="fb-fix" src="./assets/prod/images/body_facebook_reviews.png" alt="5 Star Facebook">
                         </div>
 
                         <!-- <img src="./assets/prod/svgs/body_google_reviews.svg" alt="">
@@ -1344,7 +1344,7 @@
                     <div class="btn-section text-center">
                         <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
-                        <p> Get Consent Orders Prepared Inside 24 Hours <br>
+                        <p> Get Consent Orders Prepared Inside 24 Hours  <br class="d-sm-block d-none">
                             So You Can Finally Move On With Your Life!</p>
                     </div>
                 </div>
