--- a/index.html
+++ b/index.html
@@ -1510,7 +1510,7 @@
                         that may arise from time to time that is out of the direct control of The Legal Drafter.
 
                     </p>
-                    <p class="mb-0 kk-copywrite d-flex justify-content-center">Landing Page & Digital Marketing by <a href="https://kingkong.com.au">  King Kong</a>
+                    <p class="mb-0 kk-copywrite ">Landing Page & Digital Marketing by <a href="https://kingkong.com.au">  King Kong</a>
 
                     </p>
                 </div>
