--- a/index.html
+++ b/index.html
@@ -92,9 +92,18 @@
                     <div class="btn-section">
                         <a href="#form" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
-                        <div class="hero-reviews d-flex mx-auto justify-content-center">
-                            <img src="./assets/prod/images/header_google_reviews.png" alt="5 Star Google Review">
-                            <img class="fb-fix" src="./assets/prod/images/header_facebook_reviews.png" alt="5 Star Facebook">
+
+                        <!-- <div class="hero-reviews d-flex mx-auto justify-content-center">  -->
+                        <div class="row">
+                           
+                            <div class="col-6">
+                                <img src="./assets/prod/images/header_google_reviews.png" alt="5 Star Google Review">
+                            </div>
+                            <div class="col-6">
+
+                            <img class="" src="./assets/prod/images/header_facebook_reviews.png" alt="5 Star Facebook">
+
+                            </div>
                         </div>
                     </div>
                 </div>
