--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
                             SETTLEMENT CALL</a>
 
                         <!-- <div class="hero-reviews d-flex mx-auto justify-content-center">  -->
-                        <div class="row">
+                        <div class="row hero-reviews mx-auto d-flex justify-content-center">
                            
                             <div class="col-6">
-                                <img src="./assets/prod/images/header_google_reviews.png" alt="5 Star Google Review">
+                                <img class="gl-fix" src="./assets/prod/images/header_google_reviews.png" alt="5 Star Google Review">
                             </div>
                             <div class="col-6">
 
-                            <img class="" src="./assets/prod/images/header_facebook_reviews.png" alt="5 Star Facebook">
+                            <img  src="./assets/prod/images/header_facebook_reviews.png" alt="5 Star Facebook">
 
                             </div>
                         </div>
