--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                         <div class="row hero-reviews mx-auto d-flex justify-content-center">
                            
                             <div class="col-6">
-                                <img class="gl-fix" src="./assets/prod/images/header_google_reviews.png" alt="5 Star Google Review">
+                                <img class="gl-fix sharpen" src="./assets/prod/images/header_google_reviews.png" alt="5 Star Google Review">
                             </div>
                             <div class="col-6">
 
-                            <img  src="./assets/prod/images/header_facebook_reviews.png" alt="5 Star Facebook">
+                            <img class="fb-fix" src="./assets/prod/images/header_facebook_reviews.png" alt="5 Star Facebook">
 
                             </div>
                         </div>
