Mid page logo fixes

--- a/index.html
+++ b/index.html
@@ -92,17 +92,12 @@
                     <div class="btn-section">
                         <a href="#form" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
-
-                        <!-- <div class="hero-reviews d-flex mx-auto justify-content-center">  -->
                         <div class="row hero-reviews mx-auto d-flex justify-content-center">
-                           
                             <div class="col-6">
                                 <img class="gl-fix sharpen" src="./assets/prod/images/header_google_reviews.png" alt="5 Star Google Review">
                             </div>
                             <div class="col-6">
-
-                            <img class="fb-fix" src="./assets/prod/images/header_facebook_reviews.png" alt="5 Star Facebook">
-
+                                <img class="fb-fix" src="./assets/prod/images/header_facebook_reviews.png" alt="5 Star Facebook">
                             </div>
                         </div>
                     </div>
@@ -1307,17 +1302,15 @@
                     <h3 class="subhead">Fixed Fee Of Just $1,300</h3>
 
                 </div>
-                <div class="col-md-8 col-lg-6">
-                    <!-- <div class="reviews d-flex mx-auto"> -->
-                        <div class="hero-reviews d-flex mx-auto justify-content-center">
-                            <img src="./assets/prod/images/body_google_reviews.png" alt="5 Star Google Review">
-                            <img class="fb-fix" src="./assets/prod/images/body_facebook_reviews.png" alt="5 Star Facebook">
-                        </div>
-
-                        <!-- <img src="./assets/prod/svgs/body_google_reviews.svg" alt="">
-                        <img src="./assets/prod/svgs/body_facebook_reviews.svg" alt=""> -->
-                    <!-- </div> -->
+                <div class="row hero-reviews mx-auto d-flex justify-content-center">
+                    <div class="col-6">
+                        <img class="gl-fix sharpen" src="./assets/prod/images/body_google_reviews.png" alt="5 Star Google Review">
+                    </div>
+                    <div class="col-6">
+                        <img class="fb-fix" src="./assets/prod/images/body_facebook_reviews.png" alt="5 Star Facebook">
+                    </div>
                 </div>
+           
             </div>
             <div class="row justify-content-center align-items-center content-wrapper">
                 <div class="col-md-10 col-lg-6 order-last form-text">
