--- a/index.html
+++ b/index.html
@@ -92,14 +92,19 @@
                     <div class="btn-section">
                         <a href="#form" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
-                        <div class="row hero-reviews mx-auto d-flex justify-content-center">
+
+                            <div class="row hero-reviews mx-auto d-flex justify-content-center">
+                                <img class="sharpen" src="./assets/prod/svgs/google_facebook_5_star_reviews.svg" alt="5 Star Google Review">
+                            </div>
+
+                        <!-- <div class="row hero-reviews mx-auto d-flex justify-content-center">
                             <div class="col-6">
                                 <img class="gl-fix sharpen" src="./assets/prod/images/header_google_reviews.png" alt="5 Star Google Review">
                             </div>
                             <div class="col-6">
                                 <img class="fb-fix" src="./assets/prod/images/header_facebook_reviews.png" alt="5 Star Facebook">
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -200,7 +205,7 @@
                     <div class="btn-section text-center">
                         <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
-                        <p> Get Consent Orders Prepared Inside 24 Hours <br>
+                        <p> Get Consent Orders Prepared Inside 24 Hours 
                             So You Can Finally Move On With Your Life!</p>
                     </div>
                 </div>
@@ -401,7 +406,7 @@
                     <div class="btn-section text-center">
                         <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none">
                             RAPID SETTLEMENT CALL</a>
-                        <p> Get Consent Orders Prepared Inside 24 Hours <br>
+                        <p> Get Consent Orders Prepared Inside 24 Hours 
                             So You Can Finally Move On With Your Life!</p>
                     </div>
                 </div>
@@ -494,7 +499,7 @@
                     <div class="btn-section text-md-center">
                         <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
-                        <p class="text-center"> Get Consent Orders Prepared Inside 24 Hours <br class="d-md-none">
+                        <p class="text-center"> Get Consent Orders Prepared Inside 24 Hours 
                             So You Can Finally Move On With Your Life!</p>
                     </div>
                 </div>
@@ -678,7 +683,7 @@
                 <div class="btn-section text-center">
                     <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                         SETTLEMENT CALL</a>
-                    <p> Get Consent Orders Prepared Inside 24 Hours <br>
+                    <p> Get Consent Orders Prepared Inside 24 Hours 
                         So You Can Finally Move On With Your Life!</p>
                 </div>
             </div>
@@ -706,7 +711,7 @@
                 <div class="btn-section text-center">
                     <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                         SETTLEMENT CALL</a>
-                    <p> Get Consent Orders Prepared Inside 24 Hours <br>
+                    <p> Get Consent Orders Prepared Inside 24 Hours
                         So You Can Finally Move On With Your Life!</p>
                 </div>
             </div>
@@ -1346,7 +1351,7 @@
                     <div class="btn-section text-center">
                         <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
-                        <p> Get Consent Orders Prepared Inside 24 Hours  <br class="d-sm-block d-none">
+                        <p> Get Consent Orders Prepared Inside 24 Hours  
                             So You Can Finally Move On With Your Life!</p>
                     </div>
                 </div>
@@ -1481,7 +1486,7 @@
                                             value="BOOK MY 15-MINUTE &#x00A; RAPID SETTLEMENT CALL" />
 
                                             <p class="mx-auto text-center"> Get Consent Orders Prepared Inside 24 Hours 
-                                                So You Can <br class="d-md-block d-none" > Finally Move On With Your Life!</p>
+                                                So You Can Finally Move On With Your Life!</p>
                                     </div>
                                 </div>
                             </div>
@@ -1512,7 +1517,7 @@
                         that may arise from time to time that is out of the direct control of The Legal Drafter.
 
                     </p>
-                    <p class="mb-0 kk-copywrite ">Landing Page & Digital Marketing by <a href="https://kingkong.com.au">  King Kong</a>
+                    <p class="mb-0 kk-copywrite text-center">Landing Page & Digital Marketing by <a href="https://kingkong.com.au">  King Kong</a>
 
                     </p>
                 </div>
