--- a/index.html
+++ b/index.html
@@ -96,15 +96,6 @@
                             <div class="row hero-reviews mx-auto d-flex justify-content-center">
                                 <img class="sharpen" src="./assets/prod/svgs/google_facebook_5_star_reviews.svg" alt="5 Star Google Review">
                             </div>
-
-                        <!-- <div class="row hero-reviews mx-auto d-flex justify-content-center">
-                            <div class="col-6">
-                                <img class="gl-fix sharpen" src="./assets/prod/images/header_google_reviews.png" alt="5 Star Google Review">
-                            </div>
-                            <div class="col-6">
-                                <img class="fb-fix" src="./assets/prod/images/header_facebook_reviews.png" alt="5 Star Facebook">
-                            </div>
-                        </div> -->
                     </div>
                 </div>
             </div>
@@ -205,7 +196,7 @@
                     <div class="btn-section text-center">
                         <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
-                        <p> Get Consent Orders Prepared Inside 24 Hours 
+                        <p> Get Consent Orders Prepared Inside 24 Hours <br>
                             So You Can Finally Move On With Your Life!</p>
                     </div>
                 </div>
@@ -406,14 +397,11 @@
                     <div class="btn-section text-center">
                         <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none">
                             RAPID SETTLEMENT CALL</a>
-                        <p> Get Consent Orders Prepared Inside 24 Hours 
+                        <p> Get Consent Orders Prepared Inside 24 Hours <br>
                             So You Can Finally Move On With Your Life!</p>
                     </div>
                 </div>
-                <!-- <div class="col-md-8 col-lg-6"> -->
-                <!-- </div> -->
-                <!-- <div class="row justify-content-center ">
-                </div> -->
+        
             </div>
         </div>
     </section>
@@ -499,7 +487,7 @@
                     <div class="btn-section text-md-center">
                         <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
-                        <p class="text-center"> Get Consent Orders Prepared Inside 24 Hours 
+                        <p class="text-center"> Get Consent Orders Prepared Inside 24 Hours <br>
                             So You Can Finally Move On With Your Life!</p>
                     </div>
                 </div>
@@ -683,7 +671,7 @@
                 <div class="btn-section text-center">
                     <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                         SETTLEMENT CALL</a>
-                    <p> Get Consent Orders Prepared Inside 24 Hours 
+                    <p> Get Consent Orders Prepared Inside 24 Hours <br>
                         So You Can Finally Move On With Your Life!</p>
                 </div>
             </div>
@@ -711,7 +699,7 @@
                 <div class="btn-section text-center">
                     <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                         SETTLEMENT CALL</a>
-                    <p> Get Consent Orders Prepared Inside 24 Hours
+                    <p> Get Consent Orders Prepared Inside 24 Hours <br>
                         So You Can Finally Move On With Your Life!</p>
                 </div>
             </div>
@@ -1351,7 +1339,7 @@
                     <div class="btn-section text-center">
                         <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
-                        <p> Get Consent Orders Prepared Inside 24 Hours  
+                        <p> Get Consent Orders Prepared Inside 24 Hours  <br>
                             So You Can Finally Move On With Your Life!</p>
                     </div>
                 </div>
@@ -1485,7 +1473,7 @@
                                         <input type="submit" class="btn btn-primary" 
                                             value="BOOK MY 15-MINUTE &#x00A; RAPID SETTLEMENT CALL" />
 
-                                            <p class="mx-auto text-center"> Get Consent Orders Prepared Inside 24 Hours 
+                                            <p class="mx-auto text-center"> Get Consent Orders Prepared Inside 24 Hours <br>
                                                 So You Can Finally Move On With Your Life!</p>
                                     </div>
                                 </div>
