--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                     <img class="-fluid mb-5 mb-lg-0 view-animation fade-right max-width-image d-lg-block d-none"
                         data-original-src="./assets/prod/images/left_hand_img.png">
                 </div>
-                <div class="col-md-10 col-lg-6">
+                <div class="col-md-10 col-lg-6 pad-left">
                     <h2 class="text-center text-lg-start pb-5">Save $1,000s On Greedy Lawyers Who View Your Painful
                         Separation As A Way To Line Their Pockets</h2>
                         <img class="fluid mb-5 mb-lg-0 view-animation fade-right max-width-image mx-auto d-lg-none d-block"
@@ -467,7 +467,7 @@
     <section class="img-text-section">
         <div class="container">
             <div class="row justify-content-center align-items-center">
-                <div class="col-md-10 col-lg-6 order-last order-lg-first">
+                <div class="col-md-10 col-lg-6 order-last order-lg-first pad-right">
                     <h2 class="text-center text-lg-start pb-5">Be Kept In The Loop With Regular Updates So You Know How Your
                         Settlement Is Progressing </h2>
                         <img class="sharpen img-fluid mb-5 mb-lg-0 view-animation fade-left max-width-image d-lg-none d-block mx-auto"
@@ -694,7 +694,7 @@
                     practice on its head. That's why we guarantee your Consent Orders will be prepared and ready for
                     you to sign in 24 hours or less.
                     <br><br>
-                    *T&C's apply
+                   <span class="tcs"> *T&C's apply</span>
                 </p>
                 <div class="btn-section text-center">
                     <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
@@ -1297,14 +1297,11 @@
                 </div>
                 
             </div>
-            <div class="row hero-reviews mx-auto d-flex justify-content-center">
-                <div class="col-6">
-                    <img class="gl-fix sharpen" src="./assets/prod/images/body_google_reviews.png" alt="5 Star Google Review">
-                </div>
-                <div class="col-6">
-                    <img class="fb-fix" src="./assets/prod/images/body_facebook_reviews.png" alt="5 Star Facebook">
-                </div>
+
+            <div class="row body-social-reviews mx-auto d-flex justify-content-center">
+                <img class="sharpen" src="./assets/prod/svgs/google_facebook_5_star_reviews_body.svg" alt="5 Star Google Review">
             </div>
+
             <div class="row justify-content-center align-items-center content-wrapper">
                 <div class="col-md-10 col-lg-6 order-last form-text">
                     <h5 class="text-center text-lg-start">
@@ -1470,8 +1467,8 @@
                                 </div>
                                 <div class="form-group">
                                     <div class="btn-section">
-                                        <input type="submit" class="btn btn-primary" 
-                                            value="BOOK MY 15-MINUTE &#x00A; RAPID SETTLEMENT CALL" />
+                                        <input type="submit" class="btn btn-primary" id="input" 
+                                            value="BOOK MY 15-MINUTE RAPID SETTLEMENT CALL" />
 
                                             <p class="mx-auto text-center"> Get Consent Orders Prepared Inside 24 Hours <br>
                                                 So You Can Finally Move On With Your Life!</p>
