--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <picture>
                         <source srcset="./assets/prod/images/logo-cover.webp" type="image/webp">
                         <source srcset="./assets/prod/images/logo.png" type="image/png">
-                        <img class="" src="./assets/prod/images/logo-cover.webp" alt="NAME OF COMPANY">
+                        <img class="" src="./assets/prod/images/logo-cover.webp" alt="The Legal Drater">
                     </picture>
                 </div>
                 <a href="tel:0416280901" class="header-phone d-flex align-items-center">
