Path Update, BH script removal

--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
     <!-- Compiled Stylesheet -->
     <link href="assets/prod/css/main.css" rel="stylesheet">
 
-    <!-- BugHerd Script-->
-    <script type="text/javascript" src="https://www.bugherd.com/sidebarv2.js?apikey=xkyagrgrvieyn8xdsiusbq" async="true"></script>
-
     <!-- Google Tag Manager -->
     <script>
         (function (w, d, s, l, i) {
@@ -67,11 +64,12 @@
     <section class="hero-centered text-center">
         <div class="background-image-container">
             <picture>
-                <source srcset="../assets/prod/images/hero_bg-cover.webp" type="image/webp" />
-                <source srcset="../assets/prod/images/hero_bg.png" type="image/png" />
-                <img src="../assets/prod/images/hero_bg-cover.webp" alt="" />
+                <source srcset="./assets/prod/images/hero-bg-cover.webp" type="image/webp" />
+                <source srcset="./assets/prod/images/hero-bg.png" type="image/png" />
+                <img src="./assets/prod/images/hero-bg-cover.webp" alt="" />
             </picture>
         </div>
+        
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10">
