--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <a href="tel:0416280901" class="header-phone d-flex align-items-center">
                     <div class="phone-icon mr-md-2">
-                        <img class="img-fluid" src="../assets/prod/svgs/icon-phone.svg" alt="Icon Phone">
+                       <img class="img-fluid" src="./assets/prod/svgs/icon-phone.svg" alt="Icon Phone">
                     </div>
                     <div class="phone-text d-none d-md-flex flex-column">
                         <span>Any Questions?</span>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-md-8 col-lg-6">
                     <div class="btn-section">
-                        <a href="#form" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
+                        <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID
                             SETTLEMENT CALL</a>
 
                             <div class="row hero-reviews mx-auto d-flex justify-content-center">
