--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     </script>
     <!-- End Google Tag Manager -->
 
+    <link rel="icon" type="image/png" href="./assets/prod/images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="./assets/prod/images/favicon-16x16.png" sizes="16x16" />
+    
 </head>
 
 <body>
