--- a/index.html
+++ b/index.html
@@ -181,13 +181,9 @@
                     <img class="lazyload" data-sizes="auto"
                         data-original-src="./assets/prod/images/prep_header_img.jpg">
                 </div>
-                <!-- <div class="col-md-10 img-wrap d-block d-md-none">
-                    <img class="lazyload" data-sizes="auto"
-                        data-original-src="./assets/prod/images/prep_header_img_mob.jpg">
-                </div> -->
                 <div class="usp-block-wrapper col-12">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-3 col-md-6 col-12 pb-5 order-lg-first order-lg-last">
+                    <div class="row justify-content-center mb-5">
+                        <div class="col-lg-3 col-md-6 col-12 pb-5 order-md-last order-first">
                             <div class="usp d-flex ">
                                 <div class="icon d-flex">
                                     <img src="assets/prod/svgs/saves.svg" alt="">
@@ -197,7 +193,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-12 pb-5 mb-5">
+                        <div class="col-lg-3 col-md-6 col-12 pb-5 order-md-3 order-2">
                             <div class="usp d-flex">
                                 <div class="icon d-flex">
                                     <img src="assets/prod/svgs/file.svg" alt="">
@@ -207,7 +203,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-12 pb-5">
+                        <div class="col-lg-3 col-md-6 col-12 pb-5 order-md-2 order-3">
                             <div class="usp d-flex">
                                 <div class="icon d-flex">
                                     <img src="assets/prod/svgs/thousand.svg" alt="">
@@ -217,7 +213,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-12 pb-5">
+                        <div class="col-lg-3 col-md-6 col-12 pb-5 order-md-first order-last">
                             <div class="usp d-flex">
                                 <div class="icon d-flex">
                                     <img src="assets/prod/svgs/ten.svg" alt="">
